deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-api
  labels:
    app: core-api
spec:
  selector:
    matchLabels:
      app: core-api
      tier: web
  template:
    metadata:
      labels:
        app: core-api
        tier: web
    spec:
      serviceAccountName: workload-identity-sa
      containers:
        - name: core-api
          image: europe-west4-docker.pkg.dev/pas-shared/pas/core-api:v0.9.1-dev.0
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: 200m
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.17.1
          args:
            - "--private-ip"
            - "--auto-iam-authn"
            - "--structured-logs"
            - "--port=5432"
            - "pas-development-1:europe-west4:pas-vectordb-instance"
          securityContext:
            runAsNonRoot: true
