deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: core-api
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: pas-static-ip
    networking.gke.io/managed-certificates: managed-cert
  labels:
    app: core-api
spec:
  rules:
    - host: pas-dev.fullfact.org
      http:
        paths:
          - backend:
              service:
                name: core-api
                port:
                  number: 8000
            path: /api/*
            pathType: ImplementationSpecific
---
apiVersion: v1
kind: Service
metadata:
  name: core-api
  labels:
    app: core-api
spec:
  type: NodePort
  selector:
    app: core-api
    tier: web
  ports:
    - port: 8000
      targetPort: 8000
